[gd_scene load_steps=32 format=3 uid="uid://bld7auhskowov"]

[ext_resource type="Script" path="res://MainGame/Scenes/MineScene/mine.gd" id="1_baxod"]
[ext_resource type="Texture2D" uid="uid://dvlpivphbapc1" path="res://Assets/Desert/Desert Wall Tileset.png" id="3_3w11q"]
[ext_resource type="Texture2D" uid="uid://bff2londxwk2m" path="res://Assets/Desert/Water Tileset.png" id="3_xk0lo"]
[ext_resource type="PackedScene" uid="uid://b1dt63tvvif5b" path="res://MainGame/Player/main_player.tscn" id="5_eo51l"]
[ext_resource type="Texture2D" uid="uid://c7qsyb3a445if" path="res://Assets/Inventory.png" id="6_vkcvw"]
[ext_resource type="Texture2D" uid="uid://d0mbvv6sh7cel" path="res://Assets/CoalItem.png" id="7_ow242"]
[ext_resource type="PackedScene" uid="uid://d1b54j8wr1d0q" path="res://MainGame/Objects/mines_or_spawn_area.tscn" id="8_ho662"]
[ext_resource type="Texture2D" uid="uid://bgie5yalhcnwh" path="res://Assets/Map.png" id="8_mo0te"]
[ext_resource type="Texture2D" uid="uid://c7j0bkswuddfn" path="res://Assets/Coin.png" id="8_t5o8u"]
[ext_resource type="Texture2D" uid="uid://13vrf43cr5nn" path="res://Assets/LampItem.png" id="9_j82es"]
[ext_resource type="Texture2D" uid="uid://f6h00j7y3f2o" path="res://Assets/BootItem.png" id="10_qvknx"]
[ext_resource type="Texture2D" uid="uid://bu6qgfw461oa8" path="res://Assets/PixItem.png" id="11_5s2fp"]
[ext_resource type="PackedScene" uid="uid://bb8ftr8o4haf" path="res://MainGame/Objects/statue.tscn" id="12_672yo"]
[ext_resource type="Texture2D" uid="uid://b4xymqvukwwv4" path="res://Assets/sign.png" id="17_7dbq5"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_3vgt7"]
texture = ExtResource("3_3w11q")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_0afg5"]
texture = ExtResource("3_xk0lo")
margins = Vector2i(1, 1)
separation = Vector2i(1, 1)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0

[sub_resource type="TileSet" id="TileSet_ck34a"]
physics_layer_0/collision_layer = 1
sources/1 = SubResource("TileSetAtlasSource_3vgt7")
sources/4 = SubResource("TileSetAtlasSource_0afg5")

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_me57x"]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_va2cg"]
blend_mode = 1
light_mode = 1

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_m5v8s"]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_uc5f6"]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_p2mks"]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_injno"]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_q7r68"]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_y5eg4"]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_dbtvq"]
blend_mode = 1
light_mode = 1

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_to5vs"]
blend_mode = 1
light_mode = 1

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_rfwew"]
blend_mode = 1
light_mode = 1

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_q8caq"]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_1ftn5"]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_rgi6q"]
blend_mode = 2
light_mode = 1

[node name="Mine" type="Node2D"]
script = ExtResource("1_baxod")

[node name="CanvasModulate" type="CanvasModulate" parent="."]
visible = false
texture_filter = 1
color = Color(0.0708272, 0.0708272, 0.0708272, 1)

[node name="TileMap" type="TileMap" parent="."]
texture_filter = 1
scale = Vector2(4, 4)
tile_set = SubResource("TileSet_ck34a")
format = 2
layer_0/name = "Floor"
layer_0/tile_data = PackedInt32Array(262144, 65540, 1, 327680, 65540, 1, 589828, 65540, 1, 589829, 65540, 1, 589830, 65540, 1, 589831, 65540, 1, 589832, 65540, 1, 589833, 65540, 1, 589834, 65540, 1, 589835, 65540, 1, 458769, 65540, 1, 393233, 65540, 1, 327697, 65540, 1, 262161, 65540, 1, 196625, 65540, 1, 196624, 65540, 1, 262160, 65540, 1, 327696, 65540, 1, 393232, 65540, 1, 458768, 65540, 1, 524300, 65540, 1, 524299, 65540, 1, 524298, 65540, 1, 524297, 65540, 1, 524296, 65540, 1, 524295, 65540, 1, 524294, 65540, 1, 524293, 65540, 1, 524292, 65540, 1, 458756, 65540, 1, 458757, 65540, 1, 458758, 65540, 1, 458759, 65540, 1, 458760, 65540, 1, 458761, 65540, 1, 458762, 65540, 1, 458763, 65540, 1, 458764, 65540, 1, 458765, 65540, 1, 458766, 65540, 1, 458767, 65540, 1, 393231, 65540, 1, 393230, 65540, 1, 393229, 65540, 1, 393228, 65540, 1, 393227, 65540, 1, 393226, 65540, 1, 393225, 65540, 1, 393224, 65540, 1, 393223, 65540, 1, 393222, 65540, 1, 393221, 65540, 1, 393220, 65540, 1, 393219, 65540, 1, 327681, 65540, 1, 327682, 65540, 1, 327683, 65540, 1, 327684, 65540, 1, 327685, 65540, 1, 327686, 65540, 1, 327687, 65540, 1, 327688, 65540, 1, 327691, 65540, 1, 327692, 65540, 1, 327693, 65540, 1, 327694, 65540, 1, 327695, 65540, 1, 262159, 65540, 1, 262158, 65540, 1, 262157, 65540, 1, 262156, 65540, 1, 262155, 65540, 1, 262152, 65540, 1, 262151, 65540, 1, 262150, 65540, 1, 262149, 65540, 1, 262148, 65540, 1, 262147, 65540, 1, 262146, 65540, 1, 262145, 65540, 1, 196611, 65540, 1, 196612, 65540, 1, 196613, 65540, 1, 196614, 65540, 1, 196615, 65540, 1, 196616, 65540, 1, 196617, 65540, 1, 196618, 65540, 1, 196619, 65540, 1, 196620, 65540, 1, 196621, 65540, 1, 196622, 65540, 1, 196623, 65540, 1, 655364, 65540, 1, 655365, 65540, 1, 655366, 65540, 1, 655367, 65540, 1, 655368, 65540, 1, 655369, 65540, 1, 655370, 65540, 1, 655371, 65540, 1, 196626, 65540, 1, 196627, 65540, 1, 131091, 65540, 1, 131090, 65540, 1, 262162, 65540, 1, 262163, 65540, 1, 327698, 65540, 1, 262153, 65540, 1, 327689, 65540, 1, 327690, 65540, 1, 262154, 65540, 1, 196608, 65540, 1, 196609, 65540, 1, 196610, 65540, 1, 393218, 65540, 1, 393217, 65540, 1, 393216, 65540, 1, 589836, 65540, 1, 655372, 65540, 1, 458755, 65540, 1, 65536, 65540, 1, 131072, 65540, 1, 131073, 65540, 1, 65537, 65540, 1, 65538, 65540, 1, 131074, 65540, 1, 131075, 65540, 1, 65539, 65540, 1, 65540, 65540, 1, 131076, 65540, 1, 131077, 65540, 1, 65541, 65540, 1, 65542, 65540, 1, 131078, 65540, 1, 131079, 65540, 1, 65543, 65540, 1, 65544, 65540, 1, 131080, 65540, 1, 131081, 65540, 1, 65545, 65540, 1, 65546, 65540, 1, 131082, 65540, 1, 131083, 65540, 1, 65547, 65540, 1, 65548, 65540, 1, 131084, 65540, 1, 131085, 65540, 1, 65549, 65540, 1, 65550, 65540, 1, 131086, 65540, 1, 131087, 65540, 1, 65551, 65540, 1, 65552, 65540, 1, 131088, 65540, 1, 131089, 65540, 1, 65553, 65540, 1, 65554, 65540, 1, 65555, 65540, 1, 524304, 65540, 1, 524303, 65540, 1, 524302, 65540, 1, 524301, 65540, 1, 589837, 65540, 1, 655373, 65540, 1, 655374, 65540, 1, 589838, 65540, 1, 589839, 65540, 1, 655375, 65540, 1, 655376, 65540, 1, 589840, 65540, 1, 655378, 65540, 1, 589842, 65540, 1, 655361, 65540, 1, 589825, 65540, 1, 524289, 65540, 1, 458753, 65540, 1, 458752, 65540, 1, 524288, 65540, 1, 589824, 65540, 1, 655360, 65540, 1, 655362, 65540, 1, 589826, 65540, 1, 524290, 65540, 1, 458754, 65540, 1, 524291, 65540, 1, 589827, 65540, 1, 655363, 65540, 1, 655379, 65540, 1, 589843, 65540, 1, 589841, 65540, 1, 655377, 65540, 1, 524305, 65540, 1, 524306, 65540, 1, 524307, 65540, 1, 19, 65540, 1, 18, 65540, 1, 17, 65540, 1, 16, 65540, 1, 15, 65540, 1, 14, 65540, 1, 13, 65540, 1, 12, 65540, 1, 11, 65540, 1, 10, 65540, 1, 9, 65540, 1, 8, 65540, 1, 7, 65540, 1, 6, 65540, 1, 5, 65540, 1, 4, 65540, 1, 3, 65540, 1, 2, 65540, 1, 1, 65540, 1, 0, 65540, 1, 393234, 65540, 1, 458770, 65540, 1, 458771, 65540, 1, 393235, 65540, 1, 327699, 65540, 1, 720916, 65540, 1, -1, 65540, 1, 65535, 65540, 1, 131071, 65540, 1, 196607, 65540, 1, 262143, 65540, 1, 327679, 65540, 1, 393215, 65540, 1, 458751, 65540, 1, 524287, 65540, 1, 589823, 65540, 1, 655359, 65540, 1, 720895, 65540, 1, 786431, 65540, 1, 720896, 65540, 1, 720897, 65540, 1, 720898, 65540, 1, 720899, 65540, 1, 720900, 65540, 1, 720901, 65540, 1, 720902, 65540, 1, 720903, 65540, 1, 720904, 65540, 1, 720905, 65540, 1, 720906, 65540, 1, 720907, 65540, 1, 720908, 65540, 1, 720909, 65540, 1, 720910, 65540, 1, 720911, 65540, 1, 720912, 65540, 1, 720913, 65540, 1, 720914, 65540, 1, 720915, 65540, 1, 655380, 65540, 1, 589844, 65540, 1, 524308, 65540, 1, 458772, 65540, 1, 393236, 65540, 1, 327700, 65540, 1, 262164, 65540, 1, 196628, 65540, 1, 131092, 65540, 1, 65556, 65540, 1, 20, 65540, 1, -65516, 65540, 1, -65517, 65540, 1, -65518, 65540, 1, -65519, 65540, 1, -65520, 65540, 1, -65521, 65540, 1, -65522, 65540, 1, -65523, 65540, 1, -65524, 65540, 1, -65525, 65540, 1, -65526, 65540, 1, -65527, 65540, 1, -65528, 65540, 1, -65530, 65540, 1, -65531, 65540, 1, -65533, 65540, 1, -65534, 65540, 1, -65535, 65540, 1, -65536, 65540, 1, -65532, 65540, 1, -65529, 65540, 1)
layer_1/name = "Wall"
layer_1/z_index = 1
layer_1/tile_data = PackedInt32Array(-65517, 65537, 2, -65518, 65537, 2, -65519, 65537, 2, -65520, 65537, 2, -65521, 65537, 2, -65522, 65537, 2, -65523, 65537, 2, -65524, 65537, 2, -65529, 65537, 2, -65530, 65537, 2, -65531, 65537, 2, -65532, 65537, 2, -65533, 65537, 2, -65534, 65537, 2, -65535, 65537, 2, -65536, 65537, 2, 65535, 131073, 1, 131071, 131073, 1, 196607, 131073, 1, 524287, 131073, 1, 589823, 131073, 1, 655359, 131073, 1, 720895, 131073, 1, 720896, 65537, 0, 720897, 65537, 0, 720898, 65537, 0, 720899, 65537, 0, 720900, 65537, 0, 720901, 65537, 0, 720902, 65537, 0, 720903, 65537, 0, 720904, 65537, 0, 720905, 65537, 0, 720906, 65537, 0, 720907, 65537, 0, 720908, 65537, 0, 720909, 65537, 0, 720910, 65537, 0, 720911, 65537, 0, 720915, 65537, 0, 655380, 1, 1, 589844, 1, 1, 524308, 1, 1, 458772, 1, 1, 131092, 1, 1, 65556, 1, 1, 20, 1, 1, -65516, 393217, 1, 720916, 393217, 2, 786431, 327681, 2, -1, 327681, 1)

[node name="MainPlayer" parent="." instance=ExtResource("5_eo51l")]
position = Vector2(1075, 643)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 439.0
offset_top = 475.0
offset_right = 439.0
offset_bottom = 475.0

[node name="Time" type="Control" parent="Control"]
texture_filter = 1
layout_mode = 3
anchors_preset = 0
offset_left = -243.0
offset_top = -410.0
offset_right = 384.0
offset_bottom = -264.0

[node name="Label" type="Label" parent="Control/Time"]
z_index = 100
texture_filter = 1
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 154.0
offset_top = -38.0
offset_right = 431.0
offset_bottom = 31.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 50
text = "10:00"
horizontal_alignment = 1

[node name="Timer" type="Timer" parent="Control/Time"]
wait_time = 600.0
one_shot = true

[node name="KeyMap" type="Label" parent="Control/Time"]
z_index = 100
texture_filter = 1
material = SubResource("CanvasItemMaterial_me57x")
layout_mode = 0
offset_left = -170.0
offset_top = 597.0
offset_right = 459.0
offset_bottom = 632.0
theme_override_font_sizes/font_size = 25
text = "Walking [WASD]     Sprint [shift]     Mine [E]     Map[M]"

[node name="CoalAmount" type="Label" parent="Control/Time"]
z_index = 101
texture_filter = 1
material = SubResource("CanvasItemMaterial_va2cg")
layout_mode = 0
offset_left = -122.0
offset_top = 34.0
offset_right = -77.0
offset_bottom = 62.0
theme_override_font_sizes/font_size = 20
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CoinAmount" type="Label" parent="Control/Time"]
z_index = 101
texture_filter = 1
material = SubResource("CanvasItemMaterial_va2cg")
layout_mode = 0
offset_left = -122.0
offset_top = 69.0
offset_right = -77.0
offset_bottom = 97.0
theme_override_font_sizes/font_size = 20
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BootAmount" type="Label" parent="Control/Time"]
z_index = 101
texture_filter = 1
material = SubResource("CanvasItemMaterial_va2cg")
layout_mode = 0
offset_left = -122.0
offset_top = 103.0
offset_right = -77.0
offset_bottom = 131.0
theme_override_font_sizes/font_size = 20
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LampAmount" type="Label" parent="Control/Time"]
z_index = 101
texture_filter = 1
material = SubResource("CanvasItemMaterial_va2cg")
layout_mode = 0
offset_left = -122.0
offset_top = 138.0
offset_right = -77.0
offset_bottom = 166.0
theme_override_font_sizes/font_size = 20
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PickaxeAmount" type="Label" parent="Control/Time"]
z_index = 101
texture_filter = 1
material = SubResource("CanvasItemMaterial_va2cg")
layout_mode = 0
offset_left = -122.0
offset_top = 173.0
offset_right = -77.0
offset_bottom = 201.0
theme_override_font_sizes/font_size = 20
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Inventory" type="Control" parent="Control/Time"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -183.0
offset_top = -7.0
offset_right = -183.0
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.695281, 1.33057)

[node name="TextureRect" type="TextureRect" parent="Control/Time/Inventory"]
z_index = 100
texture_filter = 1
material = SubResource("CanvasItemMaterial_m5v8s")
layout_mode = 0
offset_right = 416.0
offset_bottom = 185.0
texture = ExtResource("6_vkcvw")

[node name="TextureRect" type="TextureRect" parent="Control/Time/Inventory/TextureRect"]
z_index = 100
texture_filter = 1
material = SubResource("CanvasItemMaterial_uc5f6")
layout_mode = 0
offset_left = 45.0
offset_top = 32.0
offset_right = 91.0
offset_bottom = 52.0
texture = ExtResource("7_ow242")

[node name="Coins" type="TextureRect" parent="Control/Time/Inventory/TextureRect"]
texture_filter = 1
material = SubResource("CanvasItemMaterial_p2mks")
layout_mode = 0
offset_left = 47.4628
offset_top = 57.8699
offset_right = 88.4628
offset_bottom = 77.8699
texture = ExtResource("8_t5o8u")

[node name="Lamp" type="TextureRect" parent="Control/Time/Inventory/TextureRect"]
texture_filter = 1
material = SubResource("CanvasItemMaterial_injno")
layout_mode = 0
offset_left = 43.148
offset_top = 108.976
offset_right = 93.148
offset_bottom = 131.976
texture = ExtResource("9_j82es")
expand_mode = 1

[node name="Boot" type="TextureRect" parent="Control/Time/Inventory/TextureRect"]
texture_filter = 1
material = SubResource("CanvasItemMaterial_q7r68")
layout_mode = 0
offset_left = 41.7097
offset_top = 84.1744
offset_right = 85.7097
offset_bottom = 109.174
texture = ExtResource("10_qvknx")
expand_mode = 1

[node name="Pickaxe" type="TextureRect" parent="Control/Time/Inventory/TextureRect"]
texture_filter = 1
material = SubResource("CanvasItemMaterial_y5eg4")
layout_mode = 0
offset_left = 40.2715
offset_top = 130.771
offset_right = 94.2715
offset_bottom = 162.771
texture = ExtResource("11_5s2fp")

[node name="Quota" type="Control" parent="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = -413.0
offset_top = -461.0
offset_right = -216.0
offset_bottom = -134.0

[node name="QuotaNeeded" type="Label" parent="Control/Quota"]
z_index = 100
material = SubResource("CanvasItemMaterial_dbtvq")
layout_mode = 0
offset_left = 1.0
offset_top = 22.0
offset_right = 104.0
offset_bottom = 45.0
text = "Coal Quota:"

[node name="CoalAmount" type="Label" parent="Control/Quota"]
z_index = 100
material = SubResource("CanvasItemMaterial_to5vs")
layout_mode = 0
offset_left = 106.0
offset_top = 22.0
offset_right = 146.0
offset_bottom = 45.0
text = "???"

[node name="Level" type="Label" parent="Control/Quota"]
z_index = 100
material = SubResource("CanvasItemMaterial_rfwew")
layout_mode = 0
offset_left = 1.0
offset_top = -2.0
offset_right = 147.0
offset_bottom = 39.0
text = "Level: 1"

[node name="Map" type="Control" parent="Control"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = -367.0
offset_top = -196.0
offset_right = 426.0
offset_bottom = 240.0

[node name="MapShow" type="TextureRect" parent="Control/Map"]
z_index = 500
material = SubResource("CanvasItemMaterial_q8caq")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -60.0
offset_top = -44.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_mo0te")

[node name="Label" type="Label" parent="Control/Map"]
z_index = 500
material = SubResource("CanvasItemMaterial_1ftn5")
layout_mode = 0
offset_left = -50.0
offset_top = 392.0
offset_right = 120.0
offset_bottom = 427.0
theme_override_font_sizes/font_size = 25
text = "Close Map [M]"

[node name="MinesOrSpawnArea" parent="." instance=ExtResource("8_ho662")]
position = Vector2(1063, 729)
rotation = -1.5708
scale = Vector2(1, 4.08)

[node name="Statue" parent="." instance=ExtResource("12_672yo")]
position = Vector2(221, 217)

[node name="Sprite2D2" parent="Statue" index="1"]
visible = false

[node name="Sprite2D3" parent="Statue" index="2"]
visible = false

[node name="Sprite2D4" parent="Statue" index="3"]
visible = false

[node name="Sign" type="Sprite2D" parent="."]
z_index = 8
texture_filter = 1
material = SubResource("CanvasItemMaterial_rgi6q")
position = Vector2(1237, 665)
rotation = 0.00346142
scale = Vector2(2, 2)
texture = ExtResource("17_7dbq5")

[node name="Camera2D" type="Camera2D" parent="."]
z_index = 1000
position = Vector2(640, 360)

[connection signal="timeout" from="Control/Time/Timer" to="." method="_on_timer_timeout"]
[connection signal="thought_bubble" from="MinesOrSpawnArea" to="MainPlayer" method="_on_mines_or_spawn_area_thought_bubble"]

[editable path="Statue"]
